# maritime-intelligence

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: backend-ci.yml  ci-cd.yml  docker-build.yml  frontend-ci.yml  teardown.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/agents/: fetch_domains.py  graph.py  guardrail.py  llm.py  response_writer.py  risk_agent.py  state.py  supervisor.py  visualization.py
backend/app/agents/domains/: ais.py  aton.py  port_call.py  sea_state.py  winter.py
backend/app/api/routes/: aton.py  chat.py  dashboard.py  ports.py  risk.py  sea_state.py  test.py  vessels.py  winter_navigation.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  session.py
backend/app/services/: cache.py  risk_service.py
backend/app/services/digitraffic/: __init__.py  ais_service.py  aton_fault_service.py  base_client.py  port_call_service.py  sea_state_service.py  vessel_service.py  winter_navigation_service.py
backend/scripts/: probe_apis.py  show_risk.py  smoke_routes.py
backend/tests/: conftest.py  test_agent_phase3.py  test_routes_phase2.py  test_services.py
docs/: api-reference.md  architecture.md  deployment-guide.md
docs/sample-responses/: ais_locations.json  aton_faults.json  port_calls.json  (+4 more)
frontend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secret.template.yaml
(+26 files in other folders)
